delete profile photo api
